# discord-jokes

./: .gitignore  .pylintrc  LICENSE  README.md  mypy.ini  pyproject.toml
discord_jokes/: __main__.py  bot.py  jokes.py
